2017-11-15  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Simplify LongWordSeg::CreateSentence().

	* src/longwordseg.cpp (LongWordSeg::CreateSentence()):
	  - Use intermediate WordState instantiation and get rid of
	    wState var.
	  - Move common SepData[senIdx].Sep[sepIdx] assignments out of
	    the cases of 'if (IdxSep[Idx] >= 0)' block.
	  - Do not check Idx against textLen inside the while-loop,
	    which already checks the same condition.
	  - Move common SepData[senIdx].Sep[sepIdx] terminator assignments
	    out of the cases of 'if (SepData[senIdx].Sep[sepIdx - 1]
	    == textLen)' block.

2017-11-15  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Capitalize wordState type.

	* src/worddef.h:
	* src/wordstack.h:
	* src/longwordseg.cpp:
	* src/maxwordseg.cpp:
	  - Rename wordState type to WordState.

2017-11-15  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Add test in which long and max results differ.

	* tests/test-simple.sh:
	  - Add test case in which longest matching and maximal matching
	    schemes yield different results.
	  - Also print input string on each test step for debugging.

2017-11-11  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Add test for longest matching scheme to all tests.

	* tests/test-simple.sh:
	* tests/test-long.sh:
	* tests/test-mixed.sh:
	* tests/test-utf8-wbr.sh:
	* tests/test-latex.sh:
	  - Repeat all tests one more time, with different -m option.
	    (This seems to catch an error on longest matching.)

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove excessive LinkSep terminator.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Remove extra LinkSep[] terminator assignment.
	    Only one is enough.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Adjust SwapLinkSep() loop more.

	* src/abswordseg.cpp (AbsWordSeg::SwapLinkSep()):
	  - Rename variables: st_idx -> start; en_idx -> end.
	  - Instead of saving 'end' and directly iterating on it,